--- a/price.html
+++ b/price.html
@@ -15,7 +15,7 @@
 						  <td align="center">
 						  <!-- 단가계산 시작 -->
 
-                        <script src="./css/price2.js" charset="utf-8"></script>
+                        <script src="./price2.js" charset="utf-8"></script>
 							<form name="form1">
 								<table width="900" height="300" border="0" cellpadding="0" cellspacing="1" bgcolor="#666666">
 									<tr>
@@ -26,7 +26,7 @@
 
 									</tr>
 									<tr>
-										<td height="30" style="height:px;" class="fontNm" width="150" bgcolor="#bebebe" align="center">①&nbsp;실사출력</td>
+										<td height="30" style="height:10px;" class="fontNm" width="150" bgcolor="#bebebe" align="center">①&nbsp;실사출력</td>
 
 										<td width="250" valign="middle" bgcolor="#f7f7f7">&nbsp;&nbsp;&nbsp;<input name="x" id='xsize' type="text" maxlength="3" style="width:70px;"  placeholder="가로"/>&nbsp;cm &nbsp;
 											<input name="y" id='ysize' maxlength="3" style="width:70px;" type="text" placeholder="세로"/>&nbsp;cm
@@ -76,12 +76,7 @@
 									<tr>
 										<td height="30" class="fontNm" bgcolor="#bebebe" align="center">④&nbsp;제판툴비</td>
 										<td height="30" valign="middle" bgcolor="#f7f7f7" >&nbsp;&nbsp;&nbsp;
-											<!--            <select name="chk_info" onchange="getPrc(this)" class="font20">-->
-											<!--                <option value="0">======면적을 선택해 주세요=====</option>-->
-											<!--                <option value="400000">출력사이즈 1200cm이하 - 400,000원</option>-->
-											<!--                <option value="500000">출력사이즈 2400cm이하 - 500,000원</option>-->
-											<!--                <option value="600000">출력사이즈 3600cm이하 - 600,000원</option>-->
-											<!--            </select>-->
+
 
 										</td>
 										<td style="width:120px;" valign="middle" bgcolor="#f7f7f7" align="center">
