--- a/test.html
+++ b/test.html
@@ -47,9 +47,9 @@
                                                                                                        placeholder="가로"/>&nbsp;cm
                                 &nbsp;
                                 <input name="y" id='ysize' maxlength="3" style="width:70px;" type="text"
-                                       placeholder="세로"/>&nbsp;cm
+                                       placeholder="세로"/> &nbsp;cm
                             </td>
-                            </td>
+
                             <td style="width:120px;" valign="middle" bgcolor="#f7f7f7" align="center">
                                 <input type="text" name="area1" style="text-align:right; width:100px;">&nbsp;원
                             </td>
@@ -99,7 +99,7 @@
 
                             </td>
                             <td style="width:120px;" valign="middle" bgcolor="#f7f7f7" align="center">
-                                <input type="text" name="tool" style="text-align:right; width:100px;">&nbsp;원
+                                <input type="text" name="tool" style="text-align:right; width:100px;">&nbsp;123456원
                             </td>
                             <td style="width:200px;" valign="middle" bgcolor="#f7f7f7" align="center">
                                 <font size="2" color="#3333ff">발광면적 기준으로 제판툴비 변동됨</font>
