--- a/test.html
+++ b/test.html
@@ -126,7 +126,7 @@
                         <tr>
                             <td height="40" class="fontNm" bgcolor="#bebebe" align="center">⑥&nbsp;합&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;계</td>
                             <td height="10" valign="middle" bgcolor="#f7f7f7">&nbsp;&nbsp;&nbsp;
-                                <button type="button" value="결과보기" onclick="calcs();output();">결과보기</button>
+                                <button type="button" value="결과보기" onclick="calcs();output();">계산하기</button>
                                 <button type="reset" name='clear' value="다시입력">다시입력</button>
                                 <button type="button" onclick="savePDF()">PDF 다운</button>
                             </td>
