--- a/price.html
+++ b/price.html
@@ -15,7 +15,7 @@
 						  <td align="center">
 						  <!-- 단가계산 시작 -->
 
-                        <script src="./price2.js" charset="utf-8"></script>
+                        <script src="./price_refac.js" charset="utf-8"></script>
 							<form name="form1">
 								<table width="900" height="300" border="0" cellpadding="0" cellspacing="1" bgcolor="#666666">
 									<tr>
